tests/good/syntax/030-type-annotation.clap
val x = (42 : int)

