tests/bad/typing/011-annot-bool-instead-of-int.clap
val x = ( 42 : bool )
